syntax = "proto3";

option csharp_namespace = "GrpcOrderService";

service Orders {
  rpc PlaceOrder (OrderModel) returns (OrderModel);
}

message ProductsModel {
  int32 id = 1;
  string description = 2;
  int32 quantity =3;
}

message OrderModel {
  int32 id = 1;
  repeated ProductsModel products = 2;
}
